<resources>
    <string name="app_name">TRI APP</string>
    <string name="strNoInternetAvailable">No Internet available</string>
    <string name="strInternetAvailable">Internet available</string>
    <string name="strPassword">Password</string>
    <string name="strSignIn">SIGN IN</string>
    <string name="strMobileNumber">Username</string>
    <string name="strForgotPassword">Forgot your password?</string>
    <string name="strInProgress">In progress!</string>
    <string name="strWarningDialogTitle">TRI App Says!</string>
    <string name="strDontHaveAccount">Dont have an account? Sign Up</string>
    <string name="strUserRegistration">USER REGISTRATION</string>
    <string name="strFirstName">First name</string>
    <string name="strLastName">Last name</string>
    <string name="strEmail">Email</string>
    <string name="strMobileNumberSignUp">Mobile number</string>
    <string name="strReferenceNumber">Reference mobile number</string>
    <string name="strSignUp">SIGN UP</string>
    <string name="strResetPassword">RESET PASSWORD</string>
    <string name="strWarningEnterFirstName">First name should not be blank</string>
    <string name="strWarningEnterLastName">Last name should not be blank</string>
    <string name="strWarningEnterEmail">Email id should not be blank</string>
    <string name="strWarningEnterMobileNumber">Mobile number should not be blank</string>
    <string name="strWarningEnterPassword">Password should not be blank</string>
    <string name="strWarningEnterInvalidEmail">Please enter valid email id</string>
    <string name="strUnknowError">Oops!! something went wrong please try again</string>
    <string name="strPleasecheckEmail">Please check your email, we sent you email set up link.</string>
    <string name="strValidMobilenumber">Please enter 10 digit mobile number</string>
    <string name="strLogout">Log out</string>
    <string name="strRegistration">Registration</string>
    <string name="strHome">Home</string>
    <string name="strSync">Sync</string>
    <string name="strFellowship">Apply fellowship</string>
    <string name="strRegistredEnterprnuer">Registered entrepreneur</string>
    <string name="strCreatEnterpreneur">Create entrepreneur profile</string>
    <string name="strUpdateEnterpreneurData">Upddate entrepreneur profile</string>
    <string name="strenterAgeValidation">Age should be minimum 18 years and maximum 65 years</string>
    <string name="strmale">Male</string>
    <string name="strfemale">Female</string>
    <string name="strtrans">Transgender</string>
    <string name="strEnterpriseType">Enterprise type</string>
    <string name="strEnterpriseName">Name of enterprise</string>
    <string name="strTypeOfEnterprise">Type of enterprise</string>
    <string name="strMoreDescripptionAboutEnterprise">Description about products and enterprise</string>
    <string name="strProductOfEnterpris">Product of enterprise</string>
    <string name="strMiddleName">Middle name</string>
    <string name="strDateOfBirth">Date of birth</string>
    <string name="strSelectGender">Select gender</string>
    <string name="strMobileno">Mobile no.</string>
    <string name="strEmailID">Email Id</string>
    <string name="strSelectReligion">Select religion</string>
    <string name="strSocialCategory">Social category</string>
    <string name="strState">State</string>
    <string name="strDistrict">District</string>
    <string name="strBlock">Block</string>
    <string name="strSelectGramPunchaya">Select gram panchayat</string>
    <string name="strSelectVillege">Select village</string>
    <string name="strResidentAddress">Residence address</string>
    <string name="strPincode">Pin code</string>
    <string name="strEnrollmentDate">Enrollment date</string>
    <string name="strAAdharno">Aadhar no.</string>
    <string name="strPanno">Pan no.</string>
    <string name="strSECCno">SECC no.</string>
    <string name="strVoterId">Voter Id.</string>
    <string name="strMGNREGAno">MGNREGA job card no.</string>
    <string name="strArtisanNo">Artisan card no.</string>
    <string name="strBankaccount">Bank account no.</string>
    <string name="strBankName">Bank name</string>
    <string name="strBranchname">Branch name</string>
    <string name="strBankIFSCno">Bank IFSC code</string>
    <string name="strCurrentIncom">Current income(Monthly)</string>
    <string name="strExpectedIncom">Expected income(Monthly)</string>
    <string name="strReasonForEnterpreneurShip">Reason for taking enterpreneurship</string>
    <string name="strMaritalStatus">Marital status</string>
    <string name="strDifferentlyAble">Differently abled?</string>
    <string name="strSubmit">SUBMIT</string>
    <string name="strExisting">Existing</string>
    <string name="strNew">New</string>
    <string name="strWarningSelectState">Please select state.</string>
    <string name="strWarningSelectDistrict">Please select district.</string>
    <string name="strWarningSelectBlock">Please select block.</string>
    <string name="strSelectCurrentIncom">Select current income</string>
    <string name="strSelectExpectedIncom">Select expected income</string>
    <string name="strWarningSelectCurrenIncom">Please select current income</string>
    <string name="strEnterProperAspirationalIncome">Expected Income must be more than Current Income</string>
    <string name="strEnterStateName">Enter state name</string>
    <string name="strEnterDistrictName">Enter district name</string>
    <string name="strEnterBlockName">Enter block name</string>
    <string name="strEnterVillegeName">Enter villege name</string>
    <string name="strEnterReligionName">Enter religion name</string>
    <string name="strEnterSocialCategoryName">Enter social category name</string>
    <string name="strValidationSelectEnterprisType">Please select enterprise type</string>
    <string name="strValidationEnterpriseName">Please enter enterprise name</string>
    <string name="strValidationSelectEnterpriseName">Please select enterprise type</string>
    <string name="strValidationEnterDescription">Please enter more description about enterprise and products</string>
    <string name="strValidationEnterFirstName">Please enter first name</string>
    <string name="strValidationDateOfBirth">Please select date of birth</string>
    <string name="strValidationGender">Please select gender</string>
    <string name="strValidationReligion">Please select religion</string>
    <string name="strValidationCategory">Please select social category</string>
    <string name="strValidationState">Please select state</string>
    <string name="strValidationDistrict">Please select district</string>
    <string name="strValidationBLock">Please select block</string>
    <string name="strValidationVillege">Please select village</string>
    <string name="strValidationResidentAddress">Please enter residence address</string>
    <string name="strValidationPincode">Please enter pin code</string>
    <string name="strValidationEnrollmentDate">Please select enrollment date</string>
    <string name="strValidationCurrentIncome">Please select current income</string>
    <string name="strValidationExpectedIncome">Please select expected income</string>
    <string name="strValidationReasonForTakingEnterprenuership">Please enter reason for taking enterpreneurship</string>
    <string name="strValidationMaritalStatus">Please select marital status</string>
    <string name="strEnterpreneurProfile">Entrepreneur profile</string>
    <string name="strEducationQualification">Education qualification</string>
    <string name="strAddMore">Add more</string>
    <string name="strSave">Save</string>
    <string name="strErrorYearSelection">Year should between 1970 to  </string>
    <string name="strEducationDataSavedSuccessfully">Education data saved successfully</string>
    <string name="strValidationQualification">Please Enter Qualification</string>
    <string name="strQualification">Std./Diploma/Degree</string>
    <string name="strUniversity">Board/University</string>
    <string name="strYearOfPassing">Year of Passing</string>
    <string name="strMajorSubject">Major Subject</string>
    <string name="strSelectEducation">Select education</string>
    <string name="strCancel">Cancel</string>
    <string name="strDelete">Delete</string>
    <string name="strUpdate">Update</string>
    <string name="strEnterQualification">Please Enter Qualification</string>
    <string name="strEnterUniversity">Please Enter University</string>
    <string name="strEnteYearOfPassing">Please Enter Proper Year of Passing</string>
    <string name="strEnteMajorSubjectName">Please Enter Major Subject Name</string>
    <string name="strEnteSubject">Please Enter Subject</string>
    <string name="strRemoveView">Are you sure you want to remove item from the list?</string>
    <string name="strTitleRemove">Remove</string>
    <string name="strTitleHello">Hello</string>
    <string name="strSpecialTraining">Special training</string>
    <string name="strSubject">Subject</string>
    <string name="strInstitute">Institute</string>
    <string name="strDuration">Duration</string>
    <string name="strLearning">Learning</string>
    <string name="strSelectDuration">Select duration</string>
    <string name="strMsgTrainingDataSavedSuccessfully">Training data saved successfully</string>
    <string name="strEnterSubject">Please Enter Subject</string>
    <string name="strEnterInstitute">Please Enter Institute</string>
    <string name="strEnterDuration">Please Enter Duration</string>
    <string name="strEnterDurationValid">Please Enter valid Duration</string>
    <string name="strEnterLearning">Please Enter Learning</string>
    <string name="strWorkExperience">Work experience (Past and Present)</string>
    <string name="strNameOfOrganisation">Name of Organisation</string>
    <string name="strDesignation">Designation</string>
    <string name="strJobProfile">Job Profile</string>
    <string name="strDurationInMonth">Duration(in months)</string>
    <string name="strTitleDuration">Duration(in Months)</string>
    <string name="strTitleSelectDuration">Select Duration</string>
    <string name="strMsgWorkDataSavedSuccessfully">Work Experience data saved successfully</string>
    <string name="strEnterOrganisationName">Please Enter Name of Organisation</string>
    <string name="strEnterDesignation">Please Enter Designation</string>
    <string name="strEnterJobProfile">Please Enter Job Profile</string>
    <string name="strDataSavedSuccesfully">Data saved successfully</string>
    <string name="selectMaritalStatus">Select Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="widowed">Widowed</string>
    <string name="divorced">Separated</string>
    <string name="strSelectEnterpriseStaus">Select enterprise status</string>
    <string name="strContinue">Continue</string>
    <string name="strDiversify">Diversify</string>
    <string name="strDrop">Drop</string>
    <string name="strBusinessIdeation">Business ideation</string>
    <string name="strBusinessPlan">Business plan</string>
    <string name="strOR">OR</string>
    <string name="strBusinessPlanOptions">Based on your enterprise type we have template business plans, whould you like to copy from template business plan or create new.?</string>
    <string name="strChooseFromExistingBusinessPlan">Copy from template business plan</string>
    <string name="strCreateNewBusinessPlan">Create new business plan</string>
    <string name="strEnterpriseTrackingTitle">Enterprise tracking</string>
    <string name="strCampaign">Event</string>
    <string name="strCampaignName">Event name</string>
    <string name="strCampaignDate">Event date</string>
    <string name="strCampaignAddress">Event address</string>
    <string name="strCampaignMoreInfo">Remarks</string>
    <string name="strCreate">Create</string>
</resources>