<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        android:padding="10dp">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strSelectEnterpriseStaus"
                    android:textColor="@color/colorAppTheme"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgEnterpriseStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etGender"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbtnContinue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:text="@string/strContinue"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/rbtnDiversify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:text="@string/strDiversify"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/rbtnDrop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:checked="false"
                        android:text="@string/strDrop"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>