<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/round_corner">

        <ScrollView
            android:scrollbars="none"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strSelectGender"
                    android:textStyle="bold"
                    android:textColor="@color/colorAppTheme"
                    android:textSize="18dp" />

                <RadioGroup
                    android:id="@+id/rgGenderGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etGender"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/rbtnMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:text="@string/strmale"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/rbtnFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:checked="false"
                        android:text="@string/strfemale"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                    <RadioButton
                        android:id="@+id/rbtnTransgender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorAppTheme"
                        android:checked="false"
                        android:text="@string/strtrans"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="16dp"
                        android:theme="@style/MyRadioButton" />

                </RadioGroup>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>